# warp

./: .gitignore  LICENSE  pyproject.toml
src/warp/: __init__.py  cascades.py  config.py  core.py  dace.py  downloads.py  exoplanets.py  gaia.py  hipparcos.py  kepmodel_wrapper.py  nusyd.py  nusyd_wrapper.py  plotting.py  simbad.py  stats.py  tess.py  tseries.py  utils.py
src/warp.egg-info/: PKG-INFO  SOURCES.txt
src/warp/data/: ReadMe
